fix(styles): adjusted margin and padding so highlight isn't visible when closed

--- a/components/project-item/project-item.module.scss
+++ b/components/project-item/project-item.module.scss
@@ -60,7 +60,7 @@
 
   .techDrawer {
     transition: max-height 0.5s linear;
-    padding: 0 $spacer ;
+    padding: 5px  $spacer 0 $spacer;
     display: grid;
     grid: auto / repeat(auto-fit, minmax(100px, 1fr));
 
@@ -70,26 +70,27 @@
       font-weight: $fw-b;
       margin-bottom: $spacer / 2;
       color: $primary-clr;
+      margin-top: 5px;
     }
 
     h4::before {
-    /* Highlight color */
-    background-color: $accent-clr;
+      /* Highlight color */
+      background-color: $accent-clr;
 
-    content: "";
-    position: absolute;
-    width: calc(80% + 4px);
-    height: 110%;
-    left: -2px;
-    bottom: 0;
-    z-index: -1;
-    transform: rotate(-2deg);
-    border-radius: $br;
-    opacity: 0.8;
+      content: "";
+      position: absolute;
+      width: calc(80% + 4px);
+      height: 110%;
+      left: -2px;
+      bottom: 0;
+      z-index: -1;
+      transform: rotate(-2deg);
+      border-radius: $br;
+      opacity: 0.8;
     }
   }
 
-  .drawerClosed{
+  .drawerClosed {
     overflow: hidden;
     max-height: 0;
   }
@@ -103,7 +104,5 @@
     li {
       margin-bottom: $spacer / 2;
     }
-  } 
-
+  }
 }
-
